--- a/MvcContributor/Views/Api/PersonDetails.cshtml
+++ b/MvcContributor/Views/Api/PersonDetails.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "PersonDetails";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@*adfasdfadfvad*@
 <h2>Person details from The Movie DB</h2>
 <hr />
 @{ int listLength = Model.ImageList.Count(); }
