removed comments index

--- a/MvcContributor/Views/Contributors/Index.cshtml
+++ b/MvcContributor/Views/Contributors/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@*@model IEnumerable<MvcContributor.Models.Contributor>*@
-@model PagedList.IPagedList<MvcContributor.Models.Contributor>
+﻿@model PagedList.IPagedList<MvcContributor.Models.Contributor>
 @using PagedList.Mvc;
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 @{
