--- a/MvcContributor/Views/Contributors/Index.cshtml
+++ b/MvcContributor/Views/Contributors/Index.cshtml
@@ -1,46 +1,62 @@
-﻿@model IEnumerable<MvcContributor.Models.Contributor>
-
+﻿@model PagedList.IPagedList<MvcContributor.Models.Contributor>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 @{
     ViewBag.Title = "Index";
 }
+@section Scripts
+{
+    <script>
 
-<h2>Index</h2>
+    </script>
+}
+@using (Html.BeginForm(@*"Index", "Contributor", FormMethod.Get*@))
+{
 
-<div class="row">
-    <div class="col-6">
-        @Html.Partial("Table")
+<div class="row col-8">
+    <div class="col-6 input-group">
+        @Html.TextBox("SearchString", ViewBag.CurrentFilter as string, new { @class = "form-control", @placeholder = "Search" })
+        <div class="input-group-append">
+            <button class="btn btn-outline-warning" type="submit" value="Search">
+                <i class="fas fa-search"></i>
+            </button>
+        </div>
     </div>
-    <div class="col-6">
-        <p>rightside</p>
+    @*<div class="col-md-3">
+            <button type="submit" class="btn btn-outline-warning" value="Search"></button>
+        </div>*@
+    @*<div>
+            <button class="btn btn-outline-danger"><i class="material-icons">accessibility</i></button>
+        </div>*@
+    <div class="col-3">
+        <input type="button" class="btn btn-lg btn-outline-success" value="Create New" onclick="location.href='@Url.Action("Create", "Contributors")'" />
+    </div>
+    <div class="col-3">
+        <input type="button" class="btn btn-lg btn-outline-primary" value="Create from TMDB" onclick="location.href='@Url.Action("Index", "Api")'" />
     </div>
 </div>
-@*<p>
-        @Html.ActionLink("Create New", "Create")
+<hr>
+}
 
-        @using (Html.BeginForm())
-        {
-        <div class="row">
-            <div class="col-md-2">
-                @Html.TextBox("SearchString", null, new { @class = "form-control" })
-            </div>
-            <div class="col-md-1">
-                <input type="submit" class="btn btn-outline-success" value="Search" /><span class="glyphicon glyphicon-search"></span>
-            </div>
-        </div>
-        <hr>
-    }
-        <table class="table">
+<div class="row col-8">
+    <table class="table table-sm table-hover">
+        <thead class="thead-light">
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.Name)
+                    @Html.ActionLink("Name", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
+                    @*<button type="button" class="btn btn-outline-info" value="SortName" onclick="location.href='@Url.Action("Name", "Index", new { sortOrder = ViewBag.NameSortParm })'">SortName</button>*@
+                    @*@Html.DisplayNameFor(model => model.Name)*@
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.BirthDate)
+                    @Html.ActionLink("Birth Date", "Index", new { sortOrder = ViewBag.DateSortParm, currentFilter = ViewBag.CurrentFilter })
+                    @*@Html.DisplayNameFor(model => model.BirthDate)*@
                 </th>
 
                 <th></th>
             </tr>
+        </thead>
 
+        <tbody>
             @foreach (var item in Model)
             {
                 <tr>
@@ -52,11 +68,23 @@
                     </td>
 
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                        @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                        <button type="button" class="btn btn-outline-info" value="Edit" onclick="location.href='@Url.Action("Edit", "Contributors", new { id = item.ID })'">Edit <i class="fas fa-edit"></i></button>
+                        <button type="button" class="btn btn-outline-danger" value="Delete" onclick="location.href='@Url.Action("Delete", "Contributors", new { id = item.ID })'">Delete <i class="fas fa-trash"></i></button>
+                        @*href="@Url.Action("EditBookByID", "Books", new { bookID = item.BookDetailsID, CreatedBy = item.UserID })" onclick="return confirm('Are you sure you want to Edit?')">*@
                     </td>
                 </tr>
             }
+        </tbody>
 
-        </table>*@
+    </table>
+    <br />
+    <div class="row col-12 justify-content-center">
+        <div class="col">
+            <p>Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount</p>
+        </div>
+        <div class="col-8">
+            @Html.PagedListPager(Model, page => Url.Action("Index",
+      new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }), new PagedListRenderOptions { LinkToFirstPageFormat = "<<", LinkToPreviousPageFormat = "<", LinkToNextPageFormat = ">", LinkToLastPageFormat = ">>", MaximumPageNumbersToDisplay = 5 })
+        </div>
+    </div>
+</div>
