--- a/MvcContributor/Views/Api/Index.cshtml
+++ b/MvcContributor/Views/Api/Index.cshtml
@@ -7,56 +7,61 @@
 
 <h2>Search for contributors on TheMovieDB</h2>
 
-@using (Html.BeginForm(@*"Index", "Contributor", FormMethod.Get*@))
+@using (Html.BeginForm())
 {
-<div class="col-9 input-group">
-    @Html.TextBox("SearchString"@*, ViewBag.CurrentFilter as string*@, null, new { @class = "form-control", @placeholder = "Search" })
-    <div class="input-group-append">
-        <button class="btn btn-outline-warning" type="submit" value="Search">
-            <i class="small material-icons">search</i>
-        </button>
+<div class="row col-8">
+    <div class="col-9 input-group">
+        @Html.TextBox("SearchString", null, new { @class = "form-control", @placeholder = "Search" })
+        <div class="input-group-append">
+            <button class="btn btn-outline-warning" type="submit" value="Search">
+                <i class="small material-icons">search</i>
+            </button>
+        </div>
+    </div>
+    <div class="col-3">
+        <button type="button" class="btn btn-outline-primary col-12" value="Back" href="javascript:void(0);" onclick="history.go(-1);">Back</button>
     </div>
 </div>
 }
 
 @*<p>
-        @Html.ActionLink("Create New", "Create")
-    </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Popularity)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ProfilePath)
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+            @Html.ActionLink("Create New", "Create")
+        </p>
+    <table class="table">
         <tr>
-            
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            
-            <td>
-                @Html.DisplayFor(modelItem => item.Popularity)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProfilePath)
-            </td>
-            
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Popularity)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ProfilePath)
+            </th>
+            <th></th>
         </tr>
-    }
 
-</table>*@
+        @foreach (var item in Model)
+        {
+            <tr>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.Popularity)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProfilePath)
+                </td>
+
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
+
+    </table>*@
